<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rapariscode.petgram.AcercaDelAutor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include android:id="@+id/miBarraAccion"
            layout="@layout/actionbarfavoritos">
        </include>

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/autor_margen_superior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hqdefault"/>

        <TextView
            android:textSize="@dimen/autor_tamaño_fuente"
            android:layout_marginTop="@dimen/autor_margen_superior"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autor"/>

        <TextView
            android:textSize="@dimen/autor_tamaño_fuente"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo"/>

        <TextView
            android:textSize="@dimen/autor_tamaño_fuente"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono"/>

    </LinearLayout>

</RelativeLayout>
