<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rapariscode.petgram.Contacto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include android:id="@+id/miBarraAccion"
            layout="@layout/actionbarfavoritos">
        </include>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputSenderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_sender_name"
                android:singleLine="true"
                android:inputType="text"
                android:textColorHint="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_sender_email"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/inputMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_sender_comments"
                android:scrollbars="vertical"
                android:inputType="text"
                android:maxLength="500"
                android:focusable="true"
                android:gravity="top|left"
                android:textColorHint="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_marginTop="50dp"
            android:theme="@style/miRaisedButton"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btEnviarComentarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_enviar_comentarios"
            android:onClick="sendComments"
            />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
